# lpctron-tts-cpp

./: CMakeLists-dynamic.txt  CMakeLists-static-android.txt  CMakeLists-static-linux.txt  CMakeLists.txt  README.md  test.txt
lpcnet/: CMakeLists-android-static.txt  CMakeLists-test.txt  CMakeLists-x86-static.txt  CMakeLists.txt
lpcnet/include/: arch.h  vec_neon.h
lpcnet/interface/: lpcnet_interface.h
lpcnet/src/: ceps_codebooks.c  lpcnet_interface.c  nnet.c  test_lpcnet.c
model/: optimize.py  split_merge.sh  tflite.sh
src/: main.cc
